<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_myGallery"
        android:title="@string/action_gallery"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_myPhotos"
        android:title="@string/action_photos"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_myCamera"
        android:title="@string/action_camera"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
