<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/brushSize"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush"/>

        <ImageButton
            android:id="@+id/savePic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/save"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/save"/>

    </LinearLayout>

    <com.drawer.test.views.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">


        <Button
            android:id="@+id/paintColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paintColor"
            android:gravity="center"
            android:textColor="#000"
            android:layout_alignParentLeft="true"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/backgroundColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backgroundColor"
            android:gravity="center"
            android:textColor="#000"
            android:layout_alignParentRight="true"
            android:textAllCaps="false"/>

    </RelativeLayout>
</LinearLayout>
